[No-Card] Shashank | Refactor to fix sonar issues